--- a/app/src/main/res/menu/nav_header_menu.xml
+++ b/app/src/main/res/menu/nav_header_menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:id="@+id/item1"
-        android:title="title1"/>
-
-    <item android:id="@+id/item2"
-        android:title="title2"/>
-
-    <item android:id="@+id/item3"
-        android:title="title3"/>
-
+    <item
+        android:id="@+id/share_menu"
+        android:title="@string/share" />
+    <item
+        android:id="@+id/result_menu"
+        android:title="@string/result" />
+    <item
+        android:id="@+id/about_menu"
+        android:title="@string/about" />
 </menu>
