--- a/app/src/main/res/layout/score_layout.xml
+++ b/app/src/main/res/layout/score_layout.xml
@@ -3,9 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <TableLayout
+        android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:showDividers="middle">
 
-        />
+        <TableRow
+            android:id="@+id/table_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/table_border"
+            android:weightSum="100"
+            android:divider="@color/color_text_black"
+            android:showDividers="middle"
+            >
+
+            <TextView
+                android:id="@+id/score_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:gravity="center"
+                android:text="@string/score_table_header"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/date_text"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="50"
+                android:gravity="center"
+                android:text="@string/date_table_header"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </TableRow>
+    </TableLayout>
 </RelativeLayout>
