--- a/app/src/main/res/menu/nav_header_menu.xml
+++ b/app/src/main/res/menu/nav_header_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/result_menu"
-        android:title="@string/result" />
+        android:id="@+id/score_menu"
+        android:title="@string/score" />
     <item
         android:id="@+id/about_menu"
         android:title="@string/about" />
